Synchronizes documentation.